feat: adicionando relação entre desafio e categorias
