# application/http/views/create_challenge_input_view.go
@@ -1,7 +1,8 @@
 package views
 
 type CreateChallengeInputView struct {
-	Title       string `json:"title" biding:"required"`
-	Description string `json:"description" biding:"required"`
-	EmbedUrl    string `json:"embed_url" biding:"required"`
+	Title       string   `json:"title" biding:"required"`
+	Description string   `json:"description" biding:"required"`
+	EmbedUrl    string   `json:"embed_url" biding:"required"`
+	Categories  []string `json:"categories" biding:"required"`
 }
